unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Remediation_AB_rejection_reasons__c.field-meta.xml
<CustomField>
    <fullName>Remediation_AB_rejection_reasons__c</fullName>
    <label>Remediation AB rejection reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong labeling</fullName>
            </value>
            <value>
                <fullName>Hierarchy</fullName>
            </value>
            <value>
                <fullName>Missing Assets</fullName>
            </value>
            <value>
                <fullName>unmonitored assets</fullName>
            </value>
            <value>
                <fullName>QC was not done</fullName>
            </value>
            <value>
                <fullName>IE review was not done</fullName>
            </value>
            <value>
                <fullName>Customer requirements unclear</fullName>
            </value>
            <value>
                <fullName>Customer requirements change</fullName>
            </value>
            <value>
                <fullName>Multiple conflicting data source</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>