unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Remediation_AB_version__c.field-meta.xml
<CustomField>
    <fullName>Remediation_AB_version__c</fullName>
    <label>Remediation AB version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>