unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Remediation_Assets__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Assets__c</fullName>
    <label>Remediation Assets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inverters</fullName>
            </value>
            <value>
                <fullName>String inverters</fullName>
            </value>
            <value>
                <fullName>Combiners</fullName>
            </value>
            <value>
                <fullName>Modules</fullName>
            </value>
            <value>
                <fullName>Bi-facial modules</fullName>
            </value>
            <value>
                <fullName>Strings</fullName>
            </value>
            <value>
                <fullName>Substation</fullName>
            </value>
            <value>
                <fullName>Trackers</fullName>
            </value>
            <value>
                <fullName>Meters</fullName>
            </value>
            <value>
                <fullName>Met/Weather station</fullName>
            </value>
            <value>
                <fullName>Wind turbines</fullName>
            </value>
            <value>
                <fullName>Protective devices</fullName>
            </value>
            <value>
                <fullName>other(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>