unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Remediation_Category__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Category__c</fullName>
    <label>Remediation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Training</fullName>
            </value>
            <value>
                <fullName>External Training</fullName>
            </value>
            <value>
                <fullName>Customer Engagement</fullName>
            </value>
            <value>
                <fullName>Collateral Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>