unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Remediation_Initial_IE__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Initial_IE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remediation Initial IE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>