unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Remediation_item__c.field-meta.xml
<CustomField>
    <fullName>Remediation_item__c</fullName>
    <label>Remediation item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Build</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>Pro SAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>