unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Remediation_SAT_rejection_other_reasons__c.field-meta.xml
<CustomField>
    <fullName>Remediation_SAT_rejection_other_reasons__c</fullName>
    <label>Remediation SAT rejection other reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>