unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Remediation_SAT_rejection_reason_PF10138__c.field-meta.xml
<CustomField>
    <fullName>Remediation_SAT_rejection_reason_PF10138__c</fullName>
    <label>Remediation SAT rejection reason-PF10138</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Typo -Out</fullName>
            </value>
            <value>
                <fullName>Performance issue - weather data -Out</fullName>
            </value>
            <value>
                <fullName>Non-communicating devices -Out</fullName>
            </value>
            <value>
                <fullName>Asset Performance -Out</fullName>
            </value>
            <value>
                <fullName>Asset Performance - PF config -In</fullName>
            </value>
            <value>
                <fullName>Fault codes creating bad events -Out</fullName>
            </value>
            <value>
                <fullName>Predictive model - inaccurate info -Out</fullName>
            </value>
            <value>
                <fullName>Predictive model -In</fullName>
            </value>
            <value>
                <fullName>Degraded events - curtailment -Out</fullName>
            </value>
            <value>
                <fullName>Degraded events - PF config -In</fullName>
            </value>
            <value>
                <fullName>KPIs - multi orientation and GCR -Out</fullName>
            </value>
            <value>
                <fullName>KPIs - inaccurate info -Out</fullName>
            </value>
            <value>
                <fullName>KPIs - PF config -In</fullName>
            </value>
            <value>
                <fullName>Missing devices - EPC -Out</fullName>
            </value>
            <value>
                <fullName>Missing devices - PF config -In</fullName>
            </value>
            <value>
                <fullName>Scaling - PF config -In</fullName>
            </value>
            <value>
                <fullName>Scaling - misrepresented data -Out</fullName>
            </value>
            <value>
                <fullName>Device swaps - PF config -In</fullName>
            </value>
            <value>
                <fullName>Device swaps - inaccurate info -In</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>