unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Remediation_SAT_version__c.field-meta.xml
<CustomField>
    <fullName>Remediation_SAT_version__c</fullName>
    <label>Remediation SAT version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAT 1</fullName>
            </value>
            <value>
                <fullName>SAT 2</fullName>
            </value>
            <value>
                <fullName>SAT 3</fullName>
            </value>
            <value>
                <fullName>Pro SAT 1</fullName>
            </value>
            <value>
                <fullName>Pro SAT 2</fullName>
            </value>
            <value>
                <fullName>Pro SAT 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>