unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Remediation_type__c.field-meta.xml
<CustomField>
    <fullName>Remediation_type__c</fullName>
    <label>Remediation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal failure (customer rejection)</fullName>
            </value>
            <value>
                <fullName>External failure (customer rejection)</fullName>
            </value>
            <value>
                <fullName>Appraisal (QC / inspection)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>