unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>IE Review</fullName>
            </value>
            <value>
                <fullName>IE Reviewed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Blocked - Internal</fullName>
            </value>
            <value>
                <fullName>Blocked - External</fullName>
            </value>
            <value>
                <fullName>Blocked - 3rd party</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Backlogged</fullName>
            </value>
            <value>
                <fullName>Not Performed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>