unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Task_legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_legacy_ID__c</fullName>
    <label>Task legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>