unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Task_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Start_Date__c</fullName>
    <label>Task Start Date</label>
    <type>DateTime</type>
</CustomField>