unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Short description of the task to be completed</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>