unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Variance_Hours__c.field-meta.xml
<CustomField>
    <fullName>Variance_Hours__c</fullName>
    <formula>project_cloud__Estimated_Hours__c  -  project_cloud__Worked_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>