unpackaged/main/default/objects/project_cloud__Project_Task__c/validationRules/project_cloud__Estimated_Hours_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Estimated_Hours_Required</fullName>
    <active>true</active>
    <description>When the Project Units are &quot;Calendar Allocations&quot; or &quot;Estimated Hours&quot; the Estimated Hours field is required</description>
    <errorConditionFormula>/*Unless the Units value is &quot;Duration&quot; the Estimated Hours is required*/
ISBLANK(project_cloud__Estimated_Hours__c) &amp;&amp; NOT(ISPICKVAL(project_cloud__Units__c, &quot;Duration&quot;))</errorConditionFormula>
    <errorDisplayField>project_cloud__Estimated_Hours__c</errorDisplayField>
    <errorMessage>The Units for this Project Task require an Estimated Hours value to be defined</errorMessage>
</ValidationRule>