unpackaged/main/default/objects/project_cloud__Project_Task__c/validationRules/project_cloud__Working_Hours_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Working_Hours_Set</fullName>
    <active>true</active>
    <description>This validation rule prevents tasks being saved when there is no hours in day, hours block or working days defined. The length of a task cannot be calculated without these values</description>
    <errorConditionFormula>NOT(project_cloud__Hours_In_Day__c &gt; 0) ||
NOT(project_cloud__Hours_Block__c &gt; 0) ||
(
NOT(project_cloud__IsWorking_Monday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Tuesday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Wednesday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Thursday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Friday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Saturday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Sunday__c)
)</errorConditionFormula>
    <errorMessage>Hours In Day and Hours Block needs to be greater than 0, and at least one Working Day needs to be selected</errorMessage>
</ValidationRule>