unpackaged/main/default/objects/project_cloud__Project_Task__c/listViews/project_cloud__All_Project_Tasks.listView-meta.xml
<ListView>
    <fullName>project_cloud__All_Project_Tasks</fullName>
    <columns>NAME</columns>
    <columns>project_cloud__Work_Type__c</columns>
    <columns>project_cloud__Estimated_Hours__c</columns>
    <columns>project_cloud__Status__c</columns>
    <columns>project_cloud__Completed_Percent__c</columns>
    <columns>project_cloud__IsComplete__c</columns>
    <columns>project_cloud__Autonomous_Start__c</columns>
    <columns>project_cloud__Directs__c</columns>
    <columns>project_cloud__Start__c</columns>
    <columns>project_cloud__End__c</columns>
    <columns>project_cloud__Duration__c</columns>
    <columns>project_cloud__Allocated_Hours__c</columns>
    <columns>LOE_task__c</columns>
    <columns>LOE_subtask__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>